Capitalize error resolved, notFound page added, payment confirm page updated/styled, contact us spacing fixed

--- a/src/app/contactus/contactus.component.scss
+++ b/src/app/contactus/contactus.component.scss
@@ -46,7 +46,7 @@
 .form-container input[type=password],
 textarea {
     width: 100%;
-    padding: 15px;
+    padding: 8px;
     margin: 2px 0 8px 0;
     border: none;
     background: #f1f1f1;
